SCRUM-149: [feature] implement user registration